# Varaksha

./: .env.example  .gitignore  API_TROUBLESHOOTING.md  CLOUDFLARE_NUCLEAR_FIX.md  Cargo.toml  Dockerfile  FRONTEND_DEPLOYMENT.md  IMMEDIATE_FIX_GUIDE.md  README.md  ROOT_CAUSE_ANALYSIS.md  URGENT_FIX_LIVE_API.md  audit_results.txt  fly.toml  ml_audit.py  model_test_output.txt  requirements-train.txt  requirements.txt  start.sh  test_models.py  test_output.txt
data/models/: feature_meta.json  isolation_forest.onnx  scaler.onnx  varaksha_rf_model.onnx
docs/: security_architecture.md
docs/devlogs/: DEVLOG.md  current_state.md
frontend/: next.config.ts  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: DashMapVisualizer.tsx
frontend/app/flow/: page.tsx
frontend/app/lib/: api-config.ts
frontend/app/live/: CacheVisualizer.tsx  LegalReport.tsx  SecurityArena.tsx  page.tsx
frontend/app/timeline/: page.tsx
frontend/public/datasets/: synthetic_attack.csv
gateway/: Cargo.toml
gateway/src/: cache.rs  consent.rs  main.rs  models.rs
risk-cache/: Dockerfile
risk-cache/src/: config.rs
security/gate-m/gate/: ast_inspector.py
security/gate-m/os_hooks/: __init__.py  ebpf_monitor.py  fanotify_monitor.py  inotify_monitor.py
security/slsa/: __init__.py  generate_provenance.py  sign_artifact.py  verify_artifact.py
security/slsa/examples/: __init__.py  pipeline_simulation.py  (+1 more)
security_battleground/: runner.py
security_battleground/arenas/: supply_chain_arena.py
services/: __init__.py
services/agents/: agent03_accessible_alert.py
services/api/: sidecar.py
services/demo/: app.py
services/graph/: graph_agent.py
services/local_engine/: infer.py  train_ensemble.py
